--- a/teams/team-riker/dev/templates/karpenter.yaml
+++ b/teams/team-riker/dev/templates/karpenter.yaml
@@ -34,7 +34,7 @@ spec:
   requirements:
     - key: "karpenter.k8s.aws/instance-category"
       operator: In
-      values: ["c", "m", "t"]
+      values: ["c", "m"]
     - key: karpenter.k8s.aws/instance-cpu
       operator: Lt
       values:
